--- a/src/pages/Daily.css
+++ b/src/pages/Daily.css
@@ -1,6 +1,6 @@
-ion-content {
+/* ion-content {
   --padding-start: 80px;
-}
+} */
 ion-button {
   --background: #141415;
   --background-hover: #9ce0be;
